# klee-rocq

./: .gitignore  README.md
coq/: AstLib.v  BitVectors.v  CFG.v  ChoiceAxiom.v  Completeness.v  Concrete.v  Coqlib.v  DynamicValue.v  ExecutionTree.v  ExecutionTreeOpt.v  IDMap.v  LLVMAst.v  LLVMUtils.v  ModuleAssumptions.v  NonSpeculativeConcrete.v  ProofGeneration.v  Relation.v  SMT.v  Soundness.v  Symbolic.v  Test.v  Test_1.v  Test_3.v  Test_5.v  WellDefinedness.v  WellScopedness.v  _CoqProject
coq/Numeric/: Floats.v  IEEE754_extra.v  Integers.v  Zbits.v
coq/SMT/: Expr.v  Model.v  Simplification.v  TypedExpr.v  TypedModel.v
coq/Utils/: ListUtil.v  MapMonadExtra.v  StringMap.v  Util.v
coq/benchmarks/: Makefile  sqrt.c
coq/examples/: Makefile  out_7.v  run.sh  run_bc.sh  run_tests.sh  test_1.c  test_10.c  test_12.c  test_13.c  test_16.c  test_20.c  test_3.c  test_5.c  test_6.c  test_7.c
coq/issues/: sdiv.c
include/klee/: klee.h
lib/Coq/: CMakeLists.txt  CoqLanguage.cpp  ExprTranslation.cpp  ModuleAssumptions.cpp  ModuleTranslation.cpp  Proof.cpp  Translation.cpp
lib/Core/: CMakeLists.txt  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.h  OptimizedProofGenerator.cpp  OptimizedProofGenerator.h  ProofGenerator.cpp  ProofGenerator.h  StateTranslation.cpp  StateTranslation.h
lib/Expr/: Expr.cpp
lib/Module/: Checks.cpp  KModule.cpp
rocq/: DynamicValue.v  LLVMAst.v  LLVMUtils.v  ModuleAssumptions.v  Relation.v  Utilities.v  _CoqProject
rocq/Numeric/: Floats.v  Zbits.v
rocq/Utils/: AListFacts.v  (+7 more)
tools/klee-test/: CMakeLists.txt  main.cpp
(+31 files in other folders)
